# -

./: 1.txt  CMakeLists.txt  README.md  使用说明书.md  完整使用说明书.md  硬件连接说明书.md
components/: CMakeLists.txt
components/BEEP/: beep.c  beep.h
components/CAMERA/: camera.c  camera.h
components/GPTIM/: gptim.c  gptim.h
components/KEY/: key.c  key.h
components/LCD/: lcd.c  lcd.h  lcdfont.h
components/LED/: LED.c  LED.h
components/MOTOR/: motor.c  motor.h
components/PWM/: pwm.c  pwm.h
components/RELAY/: relay.c  relay.h
components/RGB_LED/: rgb_led.c  rgb_led.h
components/SENSOE-DO/: sensor-do.c  sensor-do.h
components/SPI/: spi.c  spi.h
components/UART/: myuart.c  myuart.h
components/continuousADC/: continuousADC.c  continuousADC.h
components/dc_motor/: dc_motor.c  dc_motor.h
components/dht11/: dht11.c  dht11.h
components/exit/: exit.c  exit.h
components/single-shotADC/: single-shotADC.c  single-shotADC.h
components/step_motor/: step_motor.c  step_motor.h
components/wifi-sta/: wifi-sta.c  wifi-sta.h
main/: CMakeLists.txt  filter.c  filter.h  main.c  protocol.c  protocol.h
pc_software/: main.py  protocol.py  requirements.txt  serial_handler.py  tcp_handler.py  verify_protocol.py
串口调试助手/: sscom.ini
